lib/src/pq/generated_bindings_pq.dart


  late final _PQinitSSLPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('PQinitSSL');
  late final _PQinitSSL = _PQinitSSLPtr.asFunction<void Function(int)>();

  void PQinitOpenSSL(
    int do_ssl,
    int do_crypto,
  ) {
    return _PQinitOpenSSL(
      do_ssl,
      do_crypto,
    );
  }

  late final _PQinitOpenSSLPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
          'PQinitOpenSSL');
  late final _PQinitOpenSSL =
      _PQinitOpenSSLPtr.asFunction<void Function(int, int)>();

  int PQgssEncInUse(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQgssEncInUse(
      conn,
    );
  }

  late final _PQgssEncInUsePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<PGconn>)>>(
          'PQgssEncInUse');
  late final _PQgssEncInUse =
      _PQgssEncInUsePtr.asFunction<int Function(ffi.Pointer<PGconn>)>();

  ffi.Pointer<ffi.Void> PQgetgssctx(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQgetgssctx(
      conn,
    );
  }

  late final _PQgetgssctxPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<PGconn>)>>('PQgetgssctx');
  late final _PQgetgssctx = _PQgetgssctxPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<PGconn>)>();

  int PQsetErrorVerbosity(
    ffi.Pointer<PGconn> conn,
    int verbosity,
  ) {
    return _PQsetErrorVerbosity(
      conn,
      verbosity,
    );
  }

  late final _PQsetErrorVerbosityPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>, ffi.Int32)>>(
      'PQsetErrorVerbosity');
  late final _PQsetErrorVerbosity = _PQsetErrorVerbosityPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, int)>();

  int PQsetErrorContextVisibility(
    ffi.Pointer<PGconn> conn,
    int show_context,
  ) {
    return _PQsetErrorContextVisibility(
      conn,
      show_context,
    );
  }

  late final _PQsetErrorContextVisibilityPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(ffi.Pointer<PGconn>, ffi.Int32)>>(
      'PQsetErrorContextVisibility');
  late final _PQsetErrorContextVisibility = _PQsetErrorContextVisibilityPtr
      .asFunction<int Function(ffi.Pointer<PGconn>, int)>();

  PQnoticeReceiver PQsetNoticeReceiver(
    ffi.Pointer<PGconn> conn,
    PQnoticeReceiver proc,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _PQsetNoticeReceiver(
      conn,
      proc,
      arg,
    );
  }

  late final _PQsetNoticeReceiverPtr = _lookup<
      ffi.NativeFunction<
          PQnoticeReceiver Function(ffi.Pointer<PGconn>, PQnoticeReceiver,
              ffi.Pointer<ffi.Void>)>>('PQsetNoticeReceiver');
  late final _PQsetNoticeReceiver = _PQsetNoticeReceiverPtr.asFunction<
      PQnoticeReceiver Function(
          ffi.Pointer<PGconn>, PQnoticeReceiver, ffi.Pointer<ffi.Void>)>();

  PQnoticeProcessor PQsetNoticeProcessor(
    ffi.Pointer<PGconn> conn,
    PQnoticeProcessor proc,
    ffi.Pointer<ffi.Void> arg,
  ) {
    return _PQsetNoticeProcessor(
      conn,
      proc,
      arg,
    );
  }

  late final _PQsetNoticeProcessorPtr = _lookup<
      ffi.NativeFunction<
          PQnoticeProcessor Function(ffi.Pointer<PGconn>, PQnoticeProcessor,
              ffi.Pointer<ffi.Void>)>>('PQsetNoticeProcessor');
  late final _PQsetNoticeProcessor = _PQsetNoticeProcessorPtr.asFunction<
      PQnoticeProcessor Function(
          ffi.Pointer<PGconn>, PQnoticeProcessor, ffi.Pointer<ffi.Void>)>();

  pgthreadlock_t PQregisterThreadLock(
    pgthreadlock_t newhandler,
  ) {
    return _PQregisterThreadLock(
      newhandler,
    );
  }

  late final _PQregisterThreadLockPtr =
      _lookup<ffi.NativeFunction<pgthreadlock_t Function(pgthreadlock_t)>>(
          'PQregisterThreadLock');
  late final _PQregisterThreadLock = _PQregisterThreadLockPtr.asFunction<
      pgthreadlock_t Function(pgthreadlock_t)>();

  void PQtrace(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<FILE> debug_port,
  ) {
    return _PQtrace(
      conn,
      debug_port,
    );
  }

  late final _PQtracePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<PGconn>, ffi.Pointer<FILE>)>>('PQtrace');
  late final _PQtrace = _PQtracePtr.asFunction<
      void Function(ffi.Pointer<PGconn>, ffi.Pointer<FILE>)>();

  void PQuntrace(
    ffi.Pointer<PGconn> conn,
  ) {
    return _PQuntrace(
      conn,
    );
  }

  late final _PQuntracePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGconn>)>>(
          'PQuntrace');
  late final _PQuntrace =
      _PQuntracePtr.asFunction<void Function(ffi.Pointer<PGconn>)>();

  void PQsetTraceFlags(
    ffi.Pointer<PGconn> conn,
    int flags,
  ) {
    return _PQsetTraceFlags(
      conn,
      flags,
    );
  }

  late final _PQsetTraceFlagsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<PGconn>, ffi.Int)>>(
      'PQsetTraceFlags');
  late final _PQsetTraceFlags =
      _PQsetTraceFlagsPtr.asFunction<void Function(ffi.Pointer<PGconn>, int)>();

  ffi.Pointer<PGresult> PQexec(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> query,
  ) {
    return _PQexec(
      conn,
      query,
    );
  }

  late final _PQexecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQexec');
  late final _PQexec = _PQexecPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<PGresult> PQexecParams(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> command,
    int nParams,
    ffi.Pointer<Oid> paramTypes,
    ffi.Pointer<ffi.Pointer<ffi.Char>> paramValues,
    ffi.Pointer<ffi.Int> paramLengths,
    ffi.Pointer<ffi.Int> paramFormats,
    int resultFormat,
  ) {
    return _PQexecParams(
      conn,
      command,
      nParams,
      paramTypes,
      paramValues,
      paramLengths,
      paramFormats,
      resultFormat,
    );
  }

  late final _PQexecParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<Oid>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('PQexecParams');
  late final _PQexecParams = _PQexecParamsPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<Oid>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int)>();

  ffi.Pointer<PGresult> PQprepare(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmtName,
    ffi.Pointer<ffi.Char> query,
    int nParams,
    ffi.Pointer<Oid> paramTypes,
  ) {
    return _PQprepare(
      conn,
      stmtName,
      query,
      nParams,
      paramTypes,
    );
  }

  late final _PQpreparePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<Oid>)>>('PQprepare');
  late final _PQprepare = _PQpreparePtr.asFunction<
      ffi.Pointer<PGresult> Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<Oid>)>();

  ffi.Pointer<PGresult> PQexecPrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmtName,
    int nParams,
    ffi.Pointer<ffi.Pointer<ffi.Char>> paramValues,
    ffi.Pointer<ffi.Int> paramLengths,
    ffi.Pointer<ffi.Int> paramFormats,
    int resultFormat,
  ) {
    return _PQexecPrepared(
      conn,
      stmtName,
      nParams,
      paramValues,
      paramLengths,
      paramFormats,
      resultFormat,
    );
  }

  late final _PQexecPreparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PGresult> Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('PQexecPrepared');
  late final _PQexecPrepared = _PQexecPreparedPtr.asFunction<
      ffi.Pointer<PGresult> Function(
          ffi.Pointer<PGconn>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int)>();

  int PQsendQuery(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> query,
  ) {
    return _PQsendQuery(
      conn,
      query,
    );
  }

  late final _PQsendQueryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>>('PQsendQuery');
  late final _PQsendQuery = _PQsendQueryPtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>)>();

  int PQsendQueryParams(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> command,
    int nParams,
    ffi.Pointer<Oid> paramTypes,
    ffi.Pointer<ffi.Pointer<ffi.Char>> paramValues,
    ffi.Pointer<ffi.Int> paramLengths,
    ffi.Pointer<ffi.Int> paramFormats,
    int resultFormat,
  ) {
    return _PQsendQueryParams(
      conn,
      command,
      nParams,
      paramTypes,
      paramValues,
      paramLengths,
      paramFormats,
      resultFormat,
    );
  }

  late final _PQsendQueryParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<Oid>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('PQsendQueryParams');
  late final _PQsendQueryParams = _PQsendQueryParamsPtr.asFunction<
      int Function(
          ffi.Pointer<PGconn>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<Oid>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          int)>();

  int PQsendPrepare(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmtName,
    ffi.Pointer<ffi.Char> query,
    int nParams,
    ffi.Pointer<Oid> paramTypes,
  ) {
    return _PQsendPrepare(
      conn,
      stmtName,
      query,
      nParams,
      paramTypes,
    );
  }

  late final _PQsendPreparePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<PGconn>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<Oid>)>>('PQsendPrepare');
  late final _PQsendPrepare = _PQsendPreparePtr.asFunction<
      int Function(ffi.Pointer<PGconn>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<Oid>)>();

  int PQsendQueryPrepared(
    ffi.Pointer<PGconn> conn,
    ffi.Pointer<ffi.Char> stmtName,
    int nParams,
    ffi.Pointer<ffi.Pointer<ffi.Char>> paramValues,
    ffi.Pointer<ffi.Int> paramLengths,
    ffi.Pointer<ffi.Int> paramFormats,
    int resultFormat,
  ) {
    return _PQsendQueryPrepared(
      conn,
      stmtName,
      nParams,
      paramValues,
      paramLengths,
      paramFormats,
      resultFormat,
    );
  }
